PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 200?, PHP 5.3.0 RC 2
- Undeprecated ticks. (Arnaud)

- Fixed bug #47779 (Wrong value for SIG_UNBLOCK and SIG_SETMASK constants).
  (Matteo)
- Fixed bug #47771 (Exception during object construction from arg call calls
  object's destructor). (Dmitry)
- Fixed bug #47714 (autoloading classes inside exception_handler leads to
  crashes). (Dmitry)
- Fixed bug #47699 (autoload and late static binding). (Dmitry)
- Fixed bug #47596 (Bus error on parsing file). (Dmitry)
- Fixed bug #47516 (nowdoc can not be embed in heredoc but can be embed in
  double quote). (Dmitry)
- Fixed bug #47038 (Memory leak in include). (Dmitry)
- Fixed bug #44409 (PDO::FETCH_SERIALIZE calls __construct()). (Matteo)
- Fixed bug #42362 (HTTP status codes 204 and 304 should not be gzipped).
  (Scott, Edward Z. Yang)


24 Mar 2009, PHP 5.3.0 RC 1
- Upgraded bundled sqlite to version 3.6.11. (Scott)
- Upgraded bundled libmagic to 5.00 in the fileinfo extension. (Scott)

- Re-enabled phar for big-endian systems after fixing problems. (Greg)

- Added LIBXML_LOADED_VERSION constant (libxml2 version currently used). (Rob)
- Added JSON_FORCE_OBJECT flag to json_encode(). (Scott, Richard Quadling)

- Added support for CP850 encoding in mbstring extension.
  (Denis Giffeler, Moriyoshi)

- Fixed bug #47757 (rename JPG to JPEG in phpinfo). (Pierre)
- Fixed bug #47678 (Allow loadExtension to be disabled in SQLite3). (Scott)
- Fixed bug #47671 (Cloning SplObjectStorage instances). (Etienne)
- Fixed bug #47664 (get_class returns NULL instead of FALSE). (Dmitry)
- Fixed bug #47593 (interface_exists() returns false when using absolute 
  namespace path). (Kalle, Felipe)
- Fixed bug #47572 (Undefined constant causes segmentation fault). (Felipe)
- Fixed bug #47549 (get_defined_constants() return array with broken
  array categories). (Ilia)